--- a/projects.html
+++ b/projects.html
@@ -164,7 +164,7 @@
     </div>
     <div class="card" data-locked="true">
       <h2>3D Data Analytics & Visualization in Mixed Reality</h2>
-      <img src="Assets/MR.png" alt="MR Project" style="width: 100%;">
+      <img src="Assets/datacenter.png" alt="MR Project" style="width: 100%;">
       <p><strong>Technologies:</strong> Unity | C# | Microsoft HoloLens | Data Visualization | PayPal API</p>
       <p><strong>Description:</strong> This research project was developed in collaboration with Microsoft HoloLens and PayPal's Data Analytics Team. The project aimed to visualize PayPal's live financial data and Site Reliability Engineering (SRE) golden signals in a 3D mixed-reality environment. The visualization was showcased at the GCU Honors Symposium and PayPal Headquarters, providing interactive and immersive insights into PayPal's real-time financial performance and system health. The project leveraged HoloLens for an immersive experience, allowing analysts to explore data in a spatial 3D format, providing enhanced decision-making and faster issue identification.</p>
       <p><strong>Features:</strong></p>
@@ -182,7 +182,7 @@
     </div>
     <div class="card" data-locked="true">
       <h2>3D Graphics Engine Demo</h2>
-      <img src="Assets/opengl.jpg" alt="3D Graphics Engine Demo" style="width: 100%;">
+      <img src="Assets/sim.jpg" alt="3D Graphics Engine Demo" style="width: 100%;">
       <p><strong>Technologies:</strong> C++ | OpenGL | GLSL</p>
       <p><strong>Description:</strong> This demo showcases a custom-built 3D graphics engine written in C++ with OpenGL and GLSL for shader programming. The engine renders basic 3D shapes, manages lighting, and supports interactive camera movement. It's an excellent starting point for developers interested in learning how to build a graphics engine from scratch.</p>
       <p><strong>Features:</strong></p>
@@ -219,10 +219,10 @@
         </p>
     </div>
     <div class="card" data-locked="true">
-      <h2>VR Mobile Game</h2>
+      <h2>COMING SOON: VR Mobile Game</h2>
       <img src="Assets/world.jpg" alt="Game: VR Mobile Game" style="width: 100%;">
       <p><strong>Technologies:</strong> Unity | C# | VR SDK | Mobile Development</p>
-      <p><strong>Description:</strong> VR Mobile Game is an immersive experience designed for virtual reality platforms on mobile devices. The game combines high-quality graphics and intuitive gameplay, allowing players to engage in thrilling challenges within a futuristic world. Navigate various environments, battle fierce enemies, and unlock new levels as you progress through the story.</p>
+      <p><strong>Description:</strong> (under development) VR Mobile Game is an immersive experience designed for virtual reality platforms on mobile devices. The game combines high-quality graphics and intuitive gameplay, allowing players to engage in thrilling challenges within a futuristic world. Navigate various environments, battle fierce enemies, and unlock new levels as you progress through the story.</p>
       <p><strong>Features:</strong></p>
       <ul>
           <li>Immersive VR experience for mobile devices</li>
@@ -233,9 +233,49 @@
           <li>Optimized for both Android and iOS VR headsets</li>
       </ul>
       <p>
+            <a href="#">View Code</a> |
+            <a href="#">Play Now</a>
+        </p>
+    </div>
+    <div class="card" data-locked="true">
+      <h2>SlidingToBase: The Google Slides-to-Game Engine</h2>
+      <img src="Assets/slides.png" alt="Game: VR Mobile Game" style="width: 100%;">
+      <p><strong>Technologies:</strong> Python | Graphics</p>
+      <p><strong>Description:</strong> SlidingToBase is a custom game engine designed to transform Google Slides presentations into interactive, standalone games or applications. It enables creators to build engaging experiences without coding expertise, leveraging familiar slide-based design tools to produce interactive narratives, educational simulations, and point-and-click adventures.</p>
+      <p><strong>Features:</strong></p>
+      <ul>
+          <li>Google Slides Integration – Parses exported Google Slides (PDF format) and converts each slide into an interactive game scene.</li>
+          <li>Python-Based Core – Built using Python, with Pygame handling rendering, input processing, and event-driven mechanics.</li>
+          <li>Scene Graph System – Manages slides as dynamic scenes, allowing for smooth navigation, animations, and scripted interactions.</li>
+          <li>Save & Load Functionality – Stores user progress, choices, and game state in a lightweight JSON format.</li>
+          <li>Point-and-Click Mechanics – Allows users to click on elements within a slide to trigger events, open new scenes, or manipulate objects.</li>
+          <li>Hotspot & Event System – Supports interactive buttons, hyperlinks, and object-based actions within slides.</li>
+          <li>Branching Navigation – Implements decision trees for non-linear storytelling and dynamic user choices.</li>
+          <li>Inventory & State Tracking – Keeps track of user interactions, progress, and collected items across slides.</li>
+      </ul>
+      <p>
             <a href="https://github.com/yourusername/neon-skies">View Code</a> |
             <a href="#">Play Now</a>
         </p>
+    </div>
+    <div class="card" data-locked="true">
+      <h2>Mortimer's Manor: The Lost Legacy</h2>
+      <img src="Assets/manor2.png" alt="PC Game" style="width: 100%;">
+      <p><strong>Technologies:</strong>Python | Custom Game Engine (SlidingToBase) | PC</p>
+      <p><strong>Description:</strong>Step into the shadowy halls of Mortimer’s Manor, a long-abandoned estate filled with cryptic puzzles, hidden passageways, and long-forgotten secrets. In this interactive point-and-click adventure, players take on the role of a detective investigating the sudden disappearance of the last known heir, uncovering a legacy shrouded in mystery. With every clue uncovered, the story unfolds, revealing sinister plots, supernatural occurrences, and a history that refuses to stay buried.</p>
+      <p><strong>Features:</strong></p>
+      <ul>
+          <li>Classic point-and-click navigation gameplay</li>
+          <li>Choice-Based Decision Trees with Multiple Endings</li>
+          <li>Built with SlidingToBase Engine (Python-Based Core)</li>
+          <li>Scene Management System and Save & Load System (JSON-based serialization)</li>
+          <li>Contextual Hotspot Detection – Automatically highlights interactive objects when hovered over, with real-time tooltip descriptions.</li>
+          <li>Puzzle Engine – Custom logic system allowing for interconnected puzzles, key-item dependencies, and state tracking.</li>
+          <li>Memory Management – Unused assets are dynamically unloaded to maintain low RAM usage.ne</li>
+      </ul>
+      <p>
+            <a href="https://docs.google.com/presentation/d/e/2PACX-1vQvecA3bbYzpZLr8jK4vNzD4mAllFjPHYO3c2DznFVp9__9PgjiRYQbYygPqWiXSX-P22G9D19zTUks/pub?start=false&loop=false&delayms=3000">Play Online Beta Version (Standalone not available for Download)</a>
+                 </p>
     </div>
     <div class="card" data-locked="true">
       <h2>Puzzle Simulator</h2>
@@ -259,8 +299,7 @@
   
   <div class="card" data-locked="true">
     <h2>Graph Theory Maze Simulator</h2>
-    <img src="Assets/graph_maze.png" alt="Game: Graph Theory Maze Simulator" style="width: 100%;">
-    <p><strong>Technologies:</strong> Unity | C# | Graph Theory | AI | Pathfinding</p>
+   <p><strong>Technologies:</strong> Unity | C# | Graph Theory | AI | Pathfinding</p>
     <p><strong>Description:</strong> The Graph Theory Maze Simulator uses graph theory algorithms to generate and solve mazes. Players can explore complex mazes, visualize pathfinding algorithms like Dijkstra’s, A* search, and more. The game also allows users to create their own mazes and challenge others to solve them using various algorithms.</p>
     <p><strong>Features:</strong></p>
     <ul>
@@ -297,30 +336,8 @@
 </div>
 
 <div class="card" data-locked="true">
-  <h2>VR Bible App: David and Goliath</h2>
-  <img src="Assets/bible.png" alt="VR Bible App: David and Goliath" style="width: 100%;">
-  <p><strong>Technologies:</strong> Unity | C# | Oculus VR | 3D Modeling </p>
-  <p><strong>Description:</strong> This immersive VR Bible app brings the story of David and Goliath to life. Users can step into the shoes of David as he faces Goliath, experiencing the ancient battle in a fully interactive 3D environment. Through the use of Oculus VR technology, this app enhances biblical storytelling, providing users with an interactive and engaging experience. This app is designed to educate, inspire, and allow users to explore the story in a dynamic new way.</p>
-  <p><strong>Features:</strong></p>
-  <ul>
-      <li>Fully immersive VR experience using Oculus</li>
-      <li>Interactive 3D models of David, Goliath, and the battlefield</li>
-      <li>Ability to take on the role of David and engage in the battle</li>
-      <li>Bible verses and teachings displayed throughout the experience</li>
-      <li>Historical and cultural context explanations of the story</li>
-      <li>Voiceovers and ambient sounds for deeper immersion</li>
-  </ul>
-  <p>
-      <a href="https://github.com/yourusername/vr-bible-david-goliath">View Code</a> |
-      <a href="#">Try Live Demo</a>
-  </p>
-</div>
-
-
-<div class="card" data-locked="true">
   <h2>NLP Code Refactoring Project</h2>
-  <img src="Assets/nlp_project.jpg" alt="NLP Code Refactoring" style="width: 100%;">
-  <p><strong>Technologies:</strong> Python | Natural Language Processing (NLP) | SpaCy | NLTK | TensorFlow</p>
+ <p><strong>Technologies:</strong> Python | Natural Language Processing (NLP) | SpaCy | NLTK | TensorFlow</p>
   <p><strong>Description:</strong> The NLP Code Refactoring project involves improving the efficiency and maintainability of a legacy Natural Language Processing (NLP) codebase. This includes optimizing algorithms for text processing, enhancing model accuracy, and ensuring that the code is modular and reusable for future NLP tasks. The goal is to refactor the code to support multiple NLP tasks such as text classification, named entity recognition (NER), and sentiment analysis, while improving its performance and readability.</p>
   <p><strong>Features:</strong></p>
   <ul>
@@ -338,8 +355,7 @@
 
 <div class="card" data-locked="true">
   <h2>Farmstead Adventures</h2>
-  <img src="Assets/farming_sim.jpg" alt="Game: Farmstead Adventures" style="width: 100%;">
-  <p><strong>Technologies:</strong> Unreal Engine | C++ | Blueprint | OpenGL</p>
+ <p><strong>Technologies:</strong> Unreal Engine | C++ | Blueprint | OpenGL</p>
   <p><strong>Description:</strong> Farmstead Adventures is a farming simulator where players inherit a rundown farm and work to restore it to its former glory. Inspired by games like Stardew Valley, players can plant crops, raise animals, and interact with a rich community of NPCs in a charming, dynamic world. The game features seasonal cycles, festivals, and personalized farm upgrades to give a rewarding experience. Players can also build relationships, complete quests, and unlock new farm tools and equipment as they progress.</p>
   <p><strong>Features:</strong></p>
   <ul>
@@ -356,50 +372,10 @@
   </p>
 </div>
 
-<div class="card" data-locked="true">
-  <h2>AR Quest: Adventure Awaits</h2>
-  <img src="Assets/ar_game.jpg" alt="Game: AR Quest" style="width: 100%;">
-  <p><strong>Technologies:</strong> Unity | C# | ARKit | ARCore</p>
-  <p><strong>Description:</strong> AR Quest: Adventure Awaits is an immersive mobile game that blends real-world exploration with fantastical quests through augmented reality. Players embark on a treasure hunt across their environment, solving puzzles, battling mythical creatures, and uncovering hidden treasures using their mobile devices. The game utilizes AR technology to interact with the real world, creating a truly engaging and interactive experience. Each level features unique challenges that take advantage of location-based gameplay and object recognition.</p>
-  <p><strong>Features:</strong></p>
-  <ul>
-      <li>Location-based quests and exploration</li>
-      <li>Interactive AR creatures and objects</li>
-      <li>Puzzle-solving and treasure hunts in the real world</li>
-      <li>AR-enhanced gameplay with immersive visual effects</li>
-      <li>Customizable character avatars and equipment</li>
-      <li>Multiplayer mode for cooperative treasure hunts</li>
-  </ul>
-  <p>
-      <a href="https://github.com/yourusername/ar-quest">View Code</a> |
-      <a href="#">Play Now</a>
-  </p>
-</div>
-
-<div class="card" data-locked="true">
-  <h2>Unreal Quest Locator</h2>
-  <img src="Assets/unreal_quest_locator.jpg" alt="Game: Unreal Quest Locator" style="width: 100%;">
-  <p><strong>Technologies:</strong> Unreal Engine | C++ | Blueprints</p>
-  <p><strong>Description:</strong> Unreal Quest Locator is an immersive action-adventure game powered by Unreal Engine. Players use advanced map systems to track and complete dynamic quests in an open-world environment. The game focuses on exploration, puzzle-solving, and real-time decision-making. By interacting with NPCs, the environment, and various quest markers, players uncover a variety of challenges. The quest locator system dynamically adjusts to player progress, offering hints and quest details in real-time, ensuring an engaging experience every time the player logs in.</p>
-  <p><strong>Features:</strong></p>
-  <ul>
-      <li>Real-time quest locator and mapping system</li>
-      <li>Open-world exploration with dynamic environments</li>
-      <li>Interactive NPCs and questline progression</li>
-      <li>Immersive puzzle-solving mechanics</li>
-      <li>Multiple quest types: combat, exploration, and strategy</li>
-      <li>Detailed world-building with atmospheric graphics</li>
-  </ul>
-  <p>
-      <a href="https://github.com/yourusername/unreal-quest-locator">View Code</a> |
-      <a href="#">Play Now</a>
-  </p>
-</div>
 
 <div class="card" data-locked="true">
   <h2>Unreal Normals for Nanite Development</h2>
-  <img src="Assets/unreal_normals_nanite.jpg" alt="Unreal Normals for Nanite Development" style="width: 100%;">
-  <p><strong>Technologies:</strong> Unreal Engine | Nanite | C++ | 3D Asset Optimization</p>
+ <p><strong>Technologies:</strong> Unreal Engine | Nanite | C++ | 3D Asset Optimization</p>
   <p><strong>Description:</strong> Unreal Normals for Nanite Development focuses on optimizing normal maps and surface detail for high-fidelity rendering with Unreal Engine's Nanite technology. Nanite enables real-time performance with massive polygon counts, but creating detailed and accurate normals is crucial to maintain visual quality. This project delves into best practices for creating, exporting, and utilizing normals with Nanite assets, ensuring that complex 3D models are rendered at their best while maintaining high performance on next-gen hardware. The guide covers topics like normal map baking, adjusting normals for different lighting conditions, and integrating them with Nanite for seamless rendering.</p>
   <p><strong>Features:</strong></p>
   <ul>
@@ -418,8 +394,7 @@
 
 <div class="card" data-locked="true">
   <h2>Sentiment Analysis of Social Media Data</h2>
-  <img src="Assets/sentiment_analysis_social_media.jpg" alt="Sentiment Analysis of Social Media Data" style="width: 100%;">
-  <p><strong>Technologies:</strong> Python | NLP | TensorFlow | Social Media APIs | Data Analysis</p>
+   <p><strong>Technologies:</strong> Python | NLP | TensorFlow | Social Media APIs | Data Analysis</p>
   <p><strong>Description:</strong> This project leverages Natural Language Processing (NLP) and machine learning techniques to analyze sentiment in social media posts. By collecting data from platforms like Twitter, Instagram, and Facebook, we can apply sentiment analysis algorithms to categorize user emotions such as positive, negative, or neutral. The goal of this project is to gain insights into public opinion, track sentiment trends over time, and provide a deeper understanding of how different topics or events are perceived across various social media platforms. The system uses pre-trained NLP models like BERT or GPT, and integrates with social media APIs to pull real-time data for analysis.</p>
   <p><strong>Features:</strong></p>
   <ul>
@@ -437,7 +412,6 @@
 
 <div class="card" data-locked="true">
   <h2>Music Recommendation System</h2>
-  <img src="Assets/music_recommendation_system.jpg" alt="Music Recommendation System" style="width: 100%;">
   <p><strong>Technologies:</strong> Python | Machine Learning | Pandas | Scikit-learn | Music APIs</p>
   <p><strong>Description:</strong> This project implements a music recommendation system that suggests songs based on user preferences and listening history. By analyzing patterns in user behavior and using machine learning algorithms such as collaborative filtering and content-based filtering, the system recommends songs, albums, or artists that align with the user's tastes. The system integrates with music APIs like Spotify to fetch data such as track details, genre information, and user playlists, providing personalized suggestions. The recommendation engine uses similarity metrics to provide relevant recommendations and adapt to changing user preferences.</p>
   <p><strong>Features:</strong></p>
@@ -455,7 +429,6 @@
 </div>
 <div class="card" data-locked="true">
   <h2>Pinterest API Image Detection & Recommendation System</h2>
-  <img src="Assets/pinterest_image_detection.jpg" alt="Pinterest Image Detection" style="width: 100%;">
   <p><strong>Technologies:</strong> Python | Pinterest API | TensorFlow | Keras | Image Recognition | Machine Learning</p>
   <p><strong>Description:</strong> This project uses the Pinterest API to integrate image detection and recommendation features into a platform. By leveraging TensorFlow and Keras for image recognition, the system can classify and analyze images pinned by users on Pinterest. The system then suggests relevant pins based on the detected image features and patterns, such as colors, objects, and context. The recommendation engine uses machine learning algorithms to suggest similar images, boards, and pins that align with user interests, providing a personalized browsing experience on Pinterest.</p>
   <p><strong>Features:</strong></p>
@@ -493,11 +466,7 @@
    // Initial volume settings
    bgm.volume = 0.1;
   bgm.muted = isMuted;
-    if (bgm.paused) {
-        bgm.play(); // Ensure background music starts playing if not already
-    }
 
-      
       // Ensure play starts on first user click
       window.addEventListener("click", () => {
         if (bgm.paused) {  // Make sure the background music is playing if it’s paused
