linkedin instead of email

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
   <div class="container">
     <img src="Assets/profile.jpg" alt="Profile Picture" class="profile-img">
     <div class="social-icons">
+      <a href="https://www.linkedin.com/in/jamiereichenberger/">✉️</a>
       <a href="https://github.com/jamreichen">🐙</a>
       <a href="jamreichen.github.io">🔗</a>
       <a href="https://www.instagram.com/jam_reichen/">📸</a>
