--- a/skills.html
+++ b/skills.html
@@ -165,7 +165,7 @@ h1 {
       </div>
       <div class="skill">
         <span class="level">Lv. 3</span>
-        Computer Vision
+        Graph databases (e.g., Neo4j, ArangoDB)
         <div class="xp-bar"><div class="xp-fill" style="width: 30%;"></div></div>
       </div>
       <div class="skill">
@@ -184,8 +184,8 @@ h1 {
         <div class="xp-bar"><div class="xp-fill" style="width: 60%;"></div></div>
       </div>
       <div class="skill">
-        <span class="level">Lv. 8</span>
-        Scikit-Learn
+        <span class="level">Lv. 3</span>
+        Vector databases (e.g., Weviate, Milvus)
         <div class="xp-bar"><div class="xp-fill" style="width: 80%;"></div></div>
       </div>
       <div class="skill">
